# search_engine

./: .gitignore  CMakeLists.txt  INVISIBLE_EXCEPTIONS.h  README.md  main.cpp
ConverterJSON/: ConverterJSON.cpp  ConverterJSON.h
InvertedIndex/: InvertedIndex.cpp  InvertedIndex.h  InvertedIndexTests.cc
JSON_files/: answers.json  config.json  requests.json
SearchServer/: SearchServer.cpp  SearchServer.h  SearchServerTest.cc
resource/: A Long Wait.txt  A present from the son.txt  Fortune and the man.txt  Good Manners.txt  Helen is Busy.txt  Hit the Floor!.txt  Messing Up.txt  The Circus.txt  The Shoebox.txt  Wrong car.txt
